
syntax = "proto3";

package o2pdf;

option go_package = "./proto;o2pdf";


service ConverterService {
  rpc Convert (stream ConvertRequest) returns (stream ConvertResponse){}
}


message ConvertRequest{
  string file_name = 1;
  bytes chunk = 2;
}

message ConvertResponse{
  string file_name = 1;
  bytes chunk = 2;
}
